k8s/base/onboarding-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onboarding-service
  namespace: mesh-six
  labels:
    app: onboarding-service
    app.kubernetes.io/part-of: mesh-six
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: onboarding-service
